# from-str-sequential

./: .gitignore  Cargo.toml  README.md
from-str-sequencial-derive/: Cargo.toml
from-str-sequencial-derive/src/: lib.rs
from-str-sequential-derive/: Cargo.toml  README.md
from-str-sequential-derive/src/: lib.rs
src/: lib.rs
