[package]
name = "from-str-sequential-derive"
version = "0.1.0"
edition = "2021"
authors = ["Kraktus"]
description = "derive crate for `from-str-sequential`"
repository = "https://github.com/kraktus/from-str-sequential"
license = "AGPL-3.0+"
readme = "README.md"
keywords = ["utility", "parsing", "string", "derive"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"